# sci_ros

./: .gitignore  CMakeLists.txt  gray_loss.py  gray_model.py  package.xml  sci_node.py
ckpt/: weights_122.pt
launch/: sci_ros_euroc.launch  sci_ros_realsense.launch
